--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   stop_watch_timer: ^3.2.1
   timelines: ^0.1.0
   uuid: ^4.5.1
+  vibration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
