--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   numberpicker: ^2.1.2
   path: ^1.9.0
   path_provider: ^2.1.4
+  share_plus: ^10.1.0
   stop_watch_timer: ^3.2.1
   timelines: ^0.1.0
   uuid: ^4.5.1
