--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   path_provider: ^2.1.4
   share_plus: ^10.1.0
   stop_watch_timer: ^3.2.1
-  timelines: ^0.1.0
+  timelines_plus: ^1.0.6
   uuid: ^4.5.1
   vibration: ^2.0.0
 
